--- a/OptimizationToolbox/Object-Oriented Optimization Toolbox.csproj
+++ b/OptimizationToolbox/Object-Oriented Optimization Toolbox.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net472</TargetFramework>
     <RootNamespace>OptimizationToolbox</RootNamespace>
     <AssemblyName>OptimizationToolbox</AssemblyName>
+    <UserSecretsId>1e874a72-08c9-426b-9c40-52d23329f659</UserSecretsId>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -11,7 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="StarMath" Version="2.0.20.204" />
+    <PackageReference Include="StarMath" Version="2.0.17.1019" />
   </ItemGroup>
 
 </Project>
